--- a/about.html
+++ b/about.html
@@ -1,1 +1,14 @@
 
+<!Doctype html>
+  <html>
+   <head>
+     <title></title>
+     <meta charset="utf-8">
+   </head>
+   <body>
+       <header>
+           <img src="SA-hotel" alt="">
+       </header>
+       <footer></footer>
+   </body>
+  </html>
